# asyncinotify_zos

./: .build.yml  README.md  pyproject.toml  setup.py  zos_inotify_impl.c
.github/: README.md
.github/workflows/: python-publish.yml
asyncinotify_zos/: __init__.py
scripts/: build_extension.py
src/: zos_inotify_exports.c  zos_inotify_impl.c
src/asyncinotify_zos/: __init__.py
