[tool.poetry]
name = "asyncinotify-zos"
version = "0.2.1"
description = "This package provides a native XPLINK wrapper for z/OS that exposes the inotify_* symbols required by asyncinotify"
authors = ["Oscar Curero <dev@curero.es>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "asyncinotify_zos"}]

[tool.poetry.dependencies]
python = ">=3.12,<4"


[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

