[tool.poetry]
name = "asyncinotify-zos"
version = "0.2.1"
description = "This package provides a native XPLINK wrapper for z/OS that exposes the inotify_* symbols required by asyncinotify"
authors = ["Oscar Curero <oscar@curero.es>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
    { include = "asyncinotify_zos", from = "src" }
]

include = [
    { path = "src/*.c", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
asyncinotify = "^4.4.4"

[tool.poetry.group.dev.dependencies]
build = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "scripts/build_extension.py"
generate-setup-file = true
